# hackathon-desktop-help

./: .gitignore  Cargo.toml  README.md  agent.md  build.rs  cli-system-prompt.md  search-setup.sh  spec.md
data/: com.canonical.UbuntuDesktopHelp.desktop.in  com.canonical.UbuntuDesktopHelp.search-provider.ini  com.canonical.UbuntuDesktopHelp.service.in
src/: docs.rs  gui.rs  llm.rs  main.rs  search_provider.rs  vectordb.rs
