[package]
name = "ubuntu-desktop-help"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-channel = "2"
bytes = "1.11.1"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
gtk4 = "0.9"
indicatif = "0.17"
libadwaita = { version = "0.7", features = ["v1_4"] }
pulldown-cmark = "0.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.14", features = ["markdown"] }
tokio = { version = "1", features = ["full"] }
zbus = "5"
