[package]
name = "ubuntu-desktop-help"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1.11.1"
clap = { version = "4.5", features = ["derive", "env"] }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
anyhow = "1"
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
pulldown-cmark = "0.11"
text-splitter = "0.14"
